# homeplanr

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RUNBOOK.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.claude/workflows/: slim-review.js
.github/workflows/: ci.yml  release.yml
e2e/: coloring.spec.ts  cost.spec.ts  curtains.spec.ts  export.spec.ts  helpers.ts  levels.spec.ts  openingStyles.spec.ts  options.spec.ts  panel.spec.ts  rooms.spec.ts  select.spec.ts  smoke.spec.ts  templates.spec.ts  visual.spec.ts  walk.spec.ts  wallart.spec.ts  wheel.spec.ts
packaging/aur/: PKGBUILD  README.md
packaging/flatpak/: README.md  com.kapuchai.homeplanr.metainfo.xml  com.kapuchai.homeplanr.yml
scripts/: makeGoldens.ts  makeIcons.sh  makeTemplates.ts  nativeSmoke.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  homeplanr.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/mime/: homeplanr.xml
src-tauri/src/: lib.rs
src/app/: CatalogPanel.tsx  ConfirmDialog.tsx  ContextMenu.tsx  ExportDialog.tsx  LevelSwitcher.tsx  MenuList.tsx  Modal.tsx  NotesDialog.tsx  OptionsDialog.tsx  PanelHandle.tsx  PropertiesPanel.tsx  ShortcutHelp.tsx  StatusHint.tsx  confirmStore.test.ts  confirmStore.ts  levelName.ts  shortcuts.ts  templates.ts
src/catalog/: builder.ts  conformance.test.ts  index.ts  openingStyles.test.ts  openingStyles.ts  palette.test.ts  palette.ts  realize.test.ts  realize.ts  roomTypes.ts  search.test.ts  search.ts  symbolFromParts.test.ts  thumbnails.ts  (+3 more)
(+176 files in other folders)
