[package]
name = "homeplanr"
version = "0.2.0"
description = "Home planning app — draw floor plans in 2D, furnish them, and view in 3D"
authors = ["kapuchai"]
license = "MIT"
repository = "https://github.com/kapuchai/homeplanr"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# Persists dialog-granted fs scopes across restarts (launch-reopen / Recent files).
# Must be registered AFTER the fs plugin in lib.rs.
tauri-plugin-persisted-scope = "2"

# Relays a second launch's argv/cwd to the running instance (.homeplanr file
# association keeps one window). Desktop-only per the plugin docs; must be
# registered FIRST in lib.rs.
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = "2"
